# extended_util

./: .hatchling.yml  README.md  pyproject.toml
src/eutil/: __init__.py  predicate.py  search.py
src/eutil_MichaelLePera/: predicate.py  search.py
