[project]
name = "eutil-michaellepera"
version = "0.0.1"
description = "Reusable objects to speed up development"
authors = [
    { name = "Michael LePera", email = "<michaeltlepera@gmail.com>" }
]
readme = "README.md"
packages = [{include = "eutil_michaellepera"}]
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/MichaelLePera/extended_util"
"Bug Tracker" = "https://github.com/MichaelLePera/extended_util/issues"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
